# dbtbuildkit-infra

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .terraform-docs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: cd.yml  ci.yml  docs.yml  example-user-workflow.yml  setup-cicd.yml  terraform-base.yml  version-tag.yml
dbt/: README.md  buildspec.tpl  codebuild-config.example.yml  dbt_project.example.yml  main.tf  outputs.tf  variables.tf
dbt/scripts/: list_codeconnections.sh  validate_github_connection.sh
dbtbuildkit/: README.md  main.tf  outputs.tf  variables.tf
dbtbuildkit/docker/: .gitignore  Dockerfile  dbt-kit  pyproject.toml
dbtbuildkit/scripts/: list_files.sh  script.sh  wait_for_github_connection.sh
docs/: Makefile  README.md  cicd.rst  conf.py  examples.rst  index.rst  make.bat  quickstart.rst  requirements.txt
docs/_generated/: .gitkeep  dbt_full.md  dbt_inputs.rst  dbt_outputs.rst  dbtbuildkit_full.md  dbtbuildkit_inputs.rst  dbtbuildkit_outputs.rst
docs/_static/: custom.css  dbtbuildkit.drawio
docs/modules/: dbt.rst  dbtbuildkit.rst
docs/scripts/: generate_terraform_docs.sh  markdown_to_rst.py
example/: Makefile  backend.tf  codebuild-config.yml  dbt_project.yml  destroy.json  example-user-workflow.yml  main.tf  provider.tf  variables.tf
